--- a/style.css
+++ b/style.css
@@ -18,10 +18,12 @@ section {
     height: 50px;
     background-color: rosybrown;
     margin: 0px;
+    text-align: right;
 }
 
 .headerText {
     text-align: right;
+    color: white;
 }
 
 
@@ -62,6 +64,7 @@ section {
     width: 300px;
     line-height: 30px;
     border: 3px solid black;
+    border-radius: 30px;
     position: relative;
     margin: auto;
     left: 0;
@@ -82,8 +85,9 @@ section {
     right: 0;
 }
 
-#footerText {
+.footerText {
     text-align: center;
     margin: auto;
     line-height: 30px;
+    padding-top: 10px;
 }
